--- a/frontend/src/Components/Cart/styles/Card.module.css
+++ b/frontend/src/Components/Cart/styles/Card.module.css
@@ -63,6 +63,7 @@
   gap: 2%;
   border: none;
   border-radius: 4px;
+  color: white;
 }
 .Options > button:nth-child(1) {
   background-color: red;
